--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
@@ -69,6 +69,11 @@
           <h2 class="benefits-title visually-hidden">Benefits title</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands with the strongest digital growth
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -117,6 +137,36 @@
               <div class="team-content">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-list-icon">
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -130,6 +180,36 @@
               <div class="team-content">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-list-icon">
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -143,6 +223,36 @@
               <div class="team-content">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-list-icon">
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -156,6 +266,36 @@
               <div class="team-content">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-list-icon">
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a href="" target="_blank" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -169,78 +309,125 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -252,14 +439,52 @@
       <!-- #endregion Our Portfolio -->
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-main-container">
+        <div class="footer-logo-container">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="futer-text-social">Social media</p>
+          <ul class="footer-list-social">
+            <li class="footer-item-social">
+              <a href="" target="_blank" class="footer-link-social">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="footer-item-social">
+              <a href="" target="_blank" class="footer-link-social">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="footer-item-social">
+              <a href="" target="_blank" class="footer-link-social">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="footer-item-social">
+              <a href="" target="_blank" class="footer-link-social">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
